Fix for scrollbars on desktop

--- a/styles/plugins.module.css
+++ b/styles/plugins.module.css
@@ -37,7 +37,7 @@
   display: flex;
   list-style: none;
   margin: 0 0 1rem;
-  overflow: scroll;
+  overflow-y: auto;
   padding: 0;
 }
 
